--- a/frontend/book-reservation-app/src/app/add/add.component.html
+++ b/frontend/book-reservation-app/src/app/add/add.component.html
@@ -1,3 +1,26 @@
-<p>
-  add works!
-</p>
+<p>Dodawanie książki</p>
+
+<div style="width:25%;float:left">
+    <p>Wprowadz poniżej dane nowego ogłoszenia!</p>
+    <p>
+        <strong>Nazwa: </strong>
+        <input type="text" [(ngModel)]="book.name" />
+    </p>
+
+    <p>
+        <strong>Autor: </strong>
+        <input type="text" [(ngModel)]="book.author" />
+    </p>
+
+    <p>
+        <strong>Data wydania: </strong>
+        <input type="date" [(ngModel)]="book.releaseDate" />
+    </p>
+
+    <p>
+        <strong>Opis: </strong>
+        <textarea [(ngModel)]="book.description"></textarea>
+    </p>
+
+    <button (click)="onSubmit()">Dodaj książkę</button>
+</div>
