--- a/frontend/book-reservation-app/src/app/reservations/reservations.component.html
+++ b/frontend/book-reservation-app/src/app/reservations/reservations.component.html
@@ -1,3 +1,27 @@
-<p>
-  reservations works!
-</p>
+<p>Lista rezerwacji książki</p>
+
+<div class="overview-container">
+    <div *ngFor="let reservation of reservations">
+
+
+        <div>
+            <p style="padding-left: 10px;">
+                <strong>Użytkownik: </strong><span>{{reservation.userID}}</span>
+            </p>
+
+            <p style="padding-left: 10px;">
+                <strong>Książka: </strong><span>{{reservation.bookID}}</span>
+            </p>
+            <p style="padding-left: 10px;">
+                <strong>Data: </strong><span>{{reservation.reservationDate | date:'yyyy-MM-dd'}}</span>
+            </p>
+
+        </div>
+
+
+    </div>
+</div>
+
+<div class="inner-outlet">
+    <router-outlet></router-outlet>
+</div>
