--- a/frontend/book-reservation-app/src/app/add/add.component.html
+++ b/frontend/book-reservation-app/src/app/add/add.component.html
@@ -1,7 +1,7 @@
 <p>Dodawanie książki</p>
 
 <div style="width:25%;float:left">
-    <p>Wprowadz poniżej dane nowego ogłoszenia!</p>
+    <p>Wprowadź dane książki</p>
     <p>
         <strong>Nazwa: </strong>
         <input type="text" [(ngModel)]="book.name" />
