--- a/frontend/book-reservation-app/src/app/list/list.component.html
+++ b/frontend/book-reservation-app/src/app/list/list.component.html
@@ -1,34 +1,39 @@
 <p>Lista książek</p>
 <a [routerLink]="['/add/']">
     <p style="padding-left: 10px;">
-      Dodaj książkę 
-  </p>
+        Dodaj książkę
+    </p>
+</a>
 <div class="overview-container">
     <div *ngFor="let book of books">
 
-            <a [routerLink]="['/edit/', book.id]">
+        <a [routerLink]="['/edit/', book.id]">
 
-                <div>
-                    <p style="padding-left: 10px;">
-                        <strong>Książka: </strong><span>{{book.name}}</span>
-                    </p>
-                    <p style="padding-left: 10px;">
-                      <strong>Autor: </strong><span>{{book.author}}</span>
-                  </p>
-                  <p style="padding-left: 10px;">
-                      <strong>Data wydania: </strong><span>{{book.releaseDate | date:'yyyy-MM-dd'}}</span>
-                  </p>
-                  <p style="padding-left: 10px;">
-                      <strong>Opis: </strong><span>{{book.description}}</span>
-                  </p>
+            <div>
+                <p style="padding-left: 10px;">
+                    <strong>Książka: </strong><span>{{book.name}}</span>
+                </p>
+                <p style="padding-left: 10px;">
+                    <strong>Autor: </strong><span>{{book.author}}</span>
+                </p>
+                <p style="padding-left: 10px;">
+                    <strong>Data wydania: </strong><span>{{book.releaseDate | date:'yyyy-MM-dd'}}</span>
+                </p>
+                <p style="padding-left: 10px;">
+                    <strong>Opis: </strong><span>{{book.description}}</span>
+                </p>
 
-                </div>
-            </a>
-            <a [routerLink]="['/reservations/', book.id]">
-            <p style="padding-left: 10px;">
-              Rezerwacja
-          </p>
+            </div>
         </a>
+        <a [routerLink]="['/reservations/', book.id]">
+            <p style="padding-left: 10px;">
+                Rezerwacje
+            </p>
+        </a>
+        <p style="padding-left: 10px;">
+            Rezerwuj
+        </p>
+
     </div>
 </div>
 
