--- a/frontend/book-reservation-app/src/app/app.component.html
+++ b/frontend/book-reservation-app/src/app/app.component.html
@@ -3,6 +3,7 @@
 <hr>
 <nav>
     <a class="nav-item" [routerLink]="['/']">Strona główna</a>
+    <a class="nav-item nav-link" (click)="logout()">Wyloguj</a>
 </nav>
 <hr>
 <div class="outer-outlet">
